# numa_server

./: CLAUDE.md  README.md
agent/: .env.example  Dockerfile  ROADMAP.md  compose.yaml  langgraph.json  pyproject.toml  requirements.txt
agent/docs/: agent-memory.md
agent/scripts/: google_auth.py  google_auth_manual.py  moodle_login.py  moodle_probe.py  moodle_reset.py  reset_state.py  seed_directives.py  smoke.py
agent/src/agent/: __init__.py  availability.py  checkpoint.py  config.py  discordbot.py  draft_graph.py  google_auth.py  graph.py  librarian.py  llm.py  main.py  memory.py  orchestrator.py  runlog.py  runtime.py  scheduler.py  seen.py  status.py  studio.py
agent/src/agent/tools/: __init__.py  gcal.py  gmail.py  moodle.py  moodle_auth.py  notion.py  web.py
dashboard/: .env.example  .gitignore  Dockerfile  compose.yaml  package.json
dashboard/frontend/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: app.js  index.html  login.html
dashboard/src/: agent-graphs.json  agent.js  auth.js  docker-monitor.js  history.js  home-history.js  home.js  metrics.js  server.js
ollama_server/: .env.example  .gitignore  compose.yaml  nginx-custom.conf  nginx-webui.conf
portfolio/: .gitignore  CLAUDE.md  Dockerfile  README.md  compose.yaml  package-lock.json  package.json
portfolio/app/: globals.css  layout.tsx  page.tsx
portfolio/components/: activities-card.tsx  contact-card.tsx  interests-card.tsx  music-card.tsx  photo-card.tsx  (+5 more)
proxy/: .env.example  .gitignore  README.md  compose.yaml
searxng/: compose.yaml  settings.yml
(+54 files in other folders)
