[project]
name = "numa-agent"
version = "0.1.0"
description = "ローカルLLM自律エージェント (Ollama + LangGraph)"
requires-python = ">=3.12"
# 依存はイメージに requirements.txt 経由で導入済み。ここでは LangGraph Studio
# (langgraph dev) がローカルパッケージとして解決できるよう最小限のメタデータのみ置く。

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
